<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">My Home Controller</string>

    <!-- Login form / Login activity-->
    <string name="username_hint">Nom d\'utilisateur</string>
    <string name="password_hint">*******</string>
    <string name="confirm">Valider</string>

    <!-- Menu -->
    <string name="logout">Déconnexion</string>

    <!-- Room Details-->
    <string name="room_details_label">Détails de la pièce: </string>
    <string name="temperature_label">Température:</string>
    <string name="light_label">Intensité de lumière:</string>
    <string name="toggle_on">Manuel</string>
    <string name="toggle_off">Manuel</string>
    <string name="current_temperature_label">Température de la pièce: </string>
    <string name="wished_temperature_label">Température désirée</string>

    <string name="exterior_temperature_label">Température extérieure: </string>
    <string name="unknown">Unknown</string>

    <string name="current_light_label">Luminosité de la pièce: </string>
    <string name="wished_light_label">Degré de luminosité souhaité:</string>


    <string name="spices_selection_label">Sélecteur d\'épices</string>
    <string name="spices_radio_button">Épices</string>
    <string name="spot_radio_button">Emplacement</string>

    <string name="spot_selection_label">Emplacement souhaité:</string>
    <string name="spice_selection_label">Épice souhaitée:</string>

    <!-- Activities titles-->
    <string name="home_activity_title">Gestion de la maison</string>
    <string name="login_activity_title">My Home Controller - Identification</string>
    <string name="room_details_activity_title">Gestion de </string>

    <string name="synchronise">Synchronisation</string>

    <string name="tryAgain">Réessayer</string>
    <string name="cancel">Annuler</string>

    <string name="default_temperature">20</string>
    <string name="default_luminosity">0</string>
</resources>
