<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center">

    <ImageView
            android:layout_width="@dimen/logo_width"
            android:layout_height="@dimen/logo_height"
            android:id="@+id/imageView"
            android:src="@drawable/logo"/>

    <Space  android:layout_width="fill_parent"
            android:layout_height="@dimen/small_space_height"/>

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/username_hint"
            android:ems="10"
            android:id="@+id/login_username"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/password_hint"
            android:ems="10"
            android:id="@+id/login_password"/>

    <Space android:layout_width="fill_parent"
           android:layout_height="@dimen/login_height_space"/>

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm"
            android:id="@+id/login_confirm"
            android:onClick="handleLogin"/>
</LinearLayout>