<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:focusableInTouchMode="true" android:background="#1676af">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/room_details_label"
            android:id="@+id/room_details_label"
            android:layout_gravity="center_horizontal" android:textColor="#99c236"/>


    <ToggleButton   android:layout_width="@dimen/toggle_width"
                    android:layout_height="@dimen/toggle_height"
                    android:layout_gravity="center"
                    android:id="@+id/manuel_auto_toggle"
                    android:textOn="@string/toggle_on"
                    android:textOff="@string/toggle_off"
                    android:onClick="handleToggle"/>


    <Space android:layout_height="@dimen/menu_space_height"
           android:layout_width="fill_parent" />

    <ViewAnimator   android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/viewAnimator">


        <include android:id="@+id/firstAnimator" layout="@layout/temperature_linear_layout"/>

        <include android:id="@+id/secondAnimator" layout="@layout/light_linear_layout"/>

        <include android:id="@+id/thirdAnimator" layout="@layout/spices_linear_layout"/>

    </ViewAnimator>
</LinearLayout>